--- a/index.html
+++ b/index.html
@@ -134,18 +134,32 @@
                             </div>
                         </div>
                     </div>
-                    
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+    <!-- Carousel End -->
+
+
     <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
     <script type="text/javascript">
         var JFL_243565279688577 = new JotformFeedback({
           formId: '243565279688577',
           base: 'https://form.jotform.com/',
-          windowTitle: 'Credit Application',
+          windowTitle: 'Grip Finance Application',
           backgroundColor: '#FFA500',
           fontColor: '#FFFFFF',
           type: 'false',
-          height: 500,
-          width: 700,
+          height: 100,
+          width: 100,
           openOnLoad: false
         });
     </script>
@@ -170,21 +184,6 @@
       ">
         Grip Finance Loan Application Form
       </a>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#header-carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </div>
-    <!-- Carousel End -->
-
-
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
