--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           backgroundColor: '#FFA500',
           fontColor: '#FFFFFF',
           type: 'false',
-          height: 100,
-          width: 100,
+          height: 500,
+          width: 700,
           openOnLoad: false
         });
     </script>
@@ -182,7 +182,7 @@
       border: 1px solid #FFA500;
       color: #FFFFFF;
       ">
-        Grip Finance Loan Application Form
+        Click Here to Apply for A Grip Finance Loan
       </a>
     <!-- About Start -->
     <div class="container-xxl py-5">
@@ -484,12 +484,48 @@ Rewards points are redeemable for cash, BSF loan payments, and more.</p>
                         <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                             <p class="d-inline-block border rounded text-primary fw-semi-bold py-1 px-3">Get In Touch
                             </p>
-                            <h1 class="display-5 mb-5">Request A Call-Back</h1>
+                            <h1 class="display-5 mb-5">Request For A Loan Below</h1>
                             
                             </div>
                         </div>
                     </div>
                 </div>
+
+    <script src ="https://form.jotform.com/static/feedback2.js" type="text/javascript"></script>
+    <script type="text/javascript">
+        var JFL_243565279688577 = new JotformFeedback({
+          formId: '243565279688577',
+          base: 'https://form.jotform.com/',
+          windowTitle: 'Grip Finance Application',
+          backgroundColor: '#FFA500',
+          fontColor: '#FFFFFF',
+          type: '0',
+          height: 500,
+          width: 700,
+          openOnLoad: false
+        });
+    </script>
+    <script src='https://cdn.jotfor.ms/s/umd/latest/for-form-embed-handler.js'></script>
+    <script>window.jotformEmbedHandler("iframe[id='243565279688577']", "https://form.jotform.com/")</script>
+      <a class="btn lightbox-243565279688577"
+      style="
+      margin-top: 16px;
+      text-transform: uppercase;
+      font-size: 14px;
+      text-decoration: none;
+      cursor: pointer;
+      display: inline-block;
+      padding: 10px;
+      font-family: inherit;
+      text-shadow: none;
+      user-select: none;
+      transition: all,.1s,ease-in;
+      background-color: #FFA500;
+      border: 1px solid #FFA500;
+      color: #FFFFFF;
+      ">
+        CLICK TO APPLY FOR A GRIP FINANCE LOAN
+      </a>
             </div>
         </div>
     </div>
