--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@ Rewards points are redeemable for cash, BSF loan payments, and more.</p>
                         <a href=""><i class="fa fa-link fa-3x text-primary"></i></a>
                     </div>
                     <div class="project-title">
-                        <h4 class="mb-0">Financial Consultancy</h4>
+                        <h4 class="mb-0">Personal Loans</h4>
                     </div>
                 </div>
                 <div class="project-item pe-5 pb-5">
@@ -654,48 +654,44 @@ Rewards points are redeemable for cash, BSF loan payments, and more.</p>
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        I never thought I could secure a loan so easily, but Grip Finance made it possible. I needed 10,000 for an emergency, and their process was fast and straightforward. The online application was simple, and I received approval within 24 hours! The repayment terms were clear, and I felt supported throughout the process. Highly recommend Grip Finance for anyone looking for quick, reliable financial help.
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-1.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Gerard Botha</h4>
+                    <span>Engineer</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        I was looking to consolidate some debt and needed a loan of 20,000. Grip Finance was my first choice after researching different lenders. The application was quick, and I was approved without any hassle. They offered competitive interest rates, and their customer service was responsive and helpful. It was a smooth experience, and I now have one manageable payment instead of multiple debts. Thank you, Grip Finance!
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-2.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Annie de Klerk</h4>
+                    <span>Teacher</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        Grip Finance came through when I needed 50,000 to expand my small business. The process was transparent and efficient. From the online application to the final approval, everything went smoothly. Their team guided me through each step and made sure I understood all the terms. With this loan, I was able to invest in new equipment and hire more staff, growing my business significantly. Highly recommend!
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-3.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Andries Coetzee</h4>
+                    <span>Bar Owner</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        Securing a loan of 100,000 through Grip Finance was an absolute game-changer for me. I was able to secure the funds needed to kickstart my new business venture. Their online platform was easy to use, and I received approval in just a few days. The support team was incredibly helpful, and I could always reach out for any questions. Thanks to Grip Finance, I’m now on the way to achieving my business goals!.
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-4.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Lukas de Bruin</h4>
+                    <span>Investor at PNP </span>
                 </div>
             </div>
         </div>
@@ -760,12 +756,9 @@ Rewards points are redeemable for cash, BSF loan payments, and more.</p>
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                    &copy; <a class="border-bottom" href="#">Your Site Name</a>, All Right Reserved.
+                    &copy; <a class="border-bottom" href="#">GRIP-FINANCE</a>, All Right Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                    Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a> Distributed By <a
-                    href="https://themewagon.com">ThemeWagon</a>
                 </div>
             </div>
         </div>
