--- a/testimonial.html
+++ b/testimonial.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Finanza - Financial Services Website Template</title>
+    <title>Grip Finance - Financial Services Website Template</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -46,7 +46,7 @@
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
             <div class="col-lg-6 px-5 text-start">
-                <small><i class="fa fa-map-marker-alt text-primary me-2"></i>123 Street, New York, USA</small>
+                <small><i class="fa fa-map-marker-alt text-primary me-2"></i>Maxwell Office Park Mac Mac Building 4 Waterfall Cit, Midrand, South Africa</small>
                 <small class="ms-4"><i class="fa fa-clock text-primary me-2"></i>9.00 am - 9.00 pm</small>
             </div>
             <div class="col-lg-6 px-5 text-end">
@@ -57,7 +57,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
             <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-                <h1 class="display-5 text-primary m-0">Finanza</h1>
+                <h1 class="display-5 text-primary m-0">Grip Finance</h1>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
                 data-bs-target="#navbarCollapse">
@@ -113,7 +113,7 @@
     <!-- Page Header End -->
 
 
-    <!-- Testimonial Start -->
+<!-- Testimonial Start -->
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
@@ -126,54 +126,49 @@
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        I never thought I could secure a loan so easily, but Grip Finance made it possible. I needed 10,000 for an emergency, and their process was fast and straightforward. The online application was simple, and I received approval within 24 hours! The repayment terms were clear, and I felt supported throughout the process. Highly recommend Grip Finance for anyone looking for quick, reliable financial help.
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-1.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Gerard Botha</h4>
+                    <span>Engineer</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        I was looking to consolidate some debt and needed a loan of 20,000. Grip Finance was my first choice after researching different lenders. The application was quick, and I was approved without any hassle. They offered competitive interest rates, and their customer service was responsive and helpful. It was a smooth experience, and I now have one manageable payment instead of multiple debts. Thank you, Grip Finance!
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-2.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Annie de Klerk</h4>
+                    <span>Teacher</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        Grip Finance came through when I needed 50,000 to expand my small business. The process was transparent and efficient. From the online application to the final approval, everything went smoothly. Their team guided me through each step and made sure I understood all the terms. With this loan, I was able to invest in new equipment and hire more staff, growing my business significantly. Highly recommend!
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-3.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Andries Coetzee</h4>
+                    <span>Bar Owner</span>
                 </div>
                 <div class="testimonial-item">
                     <div class="testimonial-text border rounded p-4 pt-5 mb-5">
                         <div class="btn-square bg-white border rounded-circle">
                             <i class="fa fa-quote-right fa-2x text-primary"></i>
                         </div>
-                        Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem
-                        lorem magna ut et, nonumy et labore et tempor diam tempor erat.
+                        Securing a loan of 100,000 through Grip Finance was an absolute game-changer for me. I was able to secure the funds needed to kickstart my new business venture. Their online platform was easy to use, and I received approval in just a few days. The support team was incredibly helpful, and I could always reach out for any questions. Thanks to Grip Finance, I’m now on the way to achieving my business goals!.
                     </div>
                     <img class="rounded-circle mb-3" src="img/testimonial-4.jpg" alt="">
-                    <h4>Client Name</h4>
-                    <span>Profession</span>
+                    <h4>Lukas de Bruin</h4>
+                    <span>Investor at PNP </span>
                 </div>
             </div>
         </div>
     </div>
     <!-- Testimonial End -->
-
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer mt-5 py-5 wow fadeIn" data-wow-delay="0.1s">
@@ -181,7 +176,7 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Our Office</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>123 Street, New York, USA</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Maxwell Office Park Mac Mac Building 4 Waterfall Cit, Midrand, South Africa</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+012 345 67890</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@example.com</p>
                     <div class="d-flex pt-2">
@@ -203,6 +198,221 @@
                     <a class="btn btn-link" href="">Business Loans</a>
                     <a class="btn btn-link" href="">Business Analysis</a>
                 </div>
+                <div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Obtaining a loan of R30,000 through Grip Finance was a game-changer. I needed funds for an urgent car repair, and their service was swift and efficient. The process was quick, and the approval came in less than 48 hours. Highly recommended for anyone in need of fast financial support.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-1.jpg" alt="">
+    <h4>Johan van Wyk</h4>
+    <span>Mechanic at Wyk Motors</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I needed R50,000 to renovate my home and Grip Finance came through for me. The entire process was transparent and simple. I’m so pleased with how easy it was to get the loan, and the repayment terms were flexible.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-2.jpg" alt="">
+    <h4>Elsa Botha</h4>
+    <span>Interior Designer</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Grip Finance was able to provide the R40,000 I needed to pay off some old debts. The online platform was easy to use, and I received the approval in just one day. I felt confident in their process, and I’m very happy with the terms.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-3.jpg" alt="">
+    <h4>Riaan Kruger</h4>
+    <span>Teacher at Pretoria High School</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        The loan of R20,000 I secured through Grip Finance helped me cover a few medical bills that piled up unexpectedly. Their service was fast, and the approval was quick. They made sure to answer all my questions along the way.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-4.jpg" alt="">
+    <h4>Alet Schoeman</h4>
+    <span>Doctor</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I needed R60,000 for my small business expansion, and Grip Finance made it happen quickly and easily. The team was professional, and the whole process was incredibly smooth. I’m excited to see how this loan helps grow my business.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-5.jpg" alt="">
+    <h4>Gerhard Steyn</h4>
+    <span>Restaurant Owner</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        With R80,000 from Grip Finance, I was able to pay off all my debts and start fresh. The application was hassle-free, and I was approved within 24 hours. I’m grateful for their service and would definitely recommend them to others in need.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-6.jpg" alt="">
+    <h4>Elize van der Merwe</h4>
+    <span>Marketing Specialist</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I was looking for a loan to cover my home renovation costs and was approved for R35,000 through Grip Finance. The process was quick, and the staff was very helpful. I’m very happy with how everything worked out!
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-7.jpg" alt="">
+    <h4>Thys Louw</h4>
+    <span>Construction Manager</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Thanks to Grip Finance, I received R90,000 to help fund my dream vacation. Their easy-to-use platform and fast approval made the whole process incredibly easy. I’m thrilled to be able to take a break and recharge.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-8.jpg" alt="">
+    <h4>Susanna Pretorius</h4>
+    <span>HR Manager</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        The R25,000 loan I secured through Grip Finance helped me cover some unforeseen medical expenses. The process was smooth, and the approval came through in just a couple of days. I’m grateful for their prompt and professional service.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-9.jpg" alt="">
+    <h4>Petro Swart</h4>
+    <span>Physiotherapist</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I needed R15,000 to cover some immediate expenses, and Grip Finance made it happen so quickly. The application was simple, and the funds were transferred into my account within 48 hours. I couldn’t be happier with their service!
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-10.jpg" alt="">
+    <h4>Jacques Botha</h4>
+    <span>Graphic Designer</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        With R70,000, I was able to get my small retail store off the ground, and I couldn’t have done it without Grip Finance. The approval process was quick, and the interest rates were fair. Thank you for helping me turn my dream into a reality!
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-11.jpg" alt="">
+    <h4>Anna-Marie Groenewald</h4>
+    <span>Retail Business Owner</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Grip Finance made the process of obtaining R55,000 for home improvements quick and easy. I was impressed with the friendly customer service and the seamless application process. I highly recommend their services!
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-12.jpg" alt="">
+    <h4>Wynand Marais</h4>
+    <span>Software Developer</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I was in a tight spot and needed a loan of R10,000. Grip Finance’s process was simple, fast, and secure. I received my funds within hours, and I’m grateful for their efficient and professional approach.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-13.jpg" alt="">
+    <h4>Gert van Zyl</h4>
+    <span>Sales Executive</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Thanks to Grip Finance, I secured a loan of R95,000 to launch my new online business. The team was extremely professional and guided me through the process step by step. The approval was quick, and the terms were flexible.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-14.jpg" alt="">
+    <h4>Jana van der Walt</h4>
+    <span>Entrepreneur</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        Grip Finance’s service was outstanding. I secured R45,000 to cover unexpected personal expenses. The loan process was quick, and I had the funds within days. I appreciate their professionalism and will definitely consider them in the future.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-15.jpg" alt="">
+    <h4>Esther Nel</h4>
+    <span>Accountant</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I needed R80,000 to expand my tech startup, and Grip Finance came through for me. The online platform was easy to navigate, and the approval came through quickly. Their customer service was amazing, and they were always there to assist.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-16.jpg" alt="">
+    <h4>Michael Meyer</h4>
+    <span>Tech Startup Founder</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        The R60,000 loan I secured from Grip Finance helped me cover some overdue business expenses. I was able to continue operations without any further stress. The process was smooth, and I would recommend them to anyone.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-17.jpg" alt="">
+    <h4>Ronel Jacobs</h4>
+    <span>Business Consultant</span>
+</div>
+
+<div class="testimonial-item">
+    <div class="testimonial-text border rounded p-4 pt-5 mb-5">
+        <div class="btn-square bg-white border rounded-circle">
+            <i class="fa fa-quote-right fa-2x text-primary"></i>
+        </div>
+        I received a loan of R70,000 to complete some necessary repairs on my house, and the process was so easy. The approval was quick, and the repayment terms were clear. I’m very satisfied with the service.
+    </div>
+    <img class="rounded-circle mb-3" src="img/testimonial-18.jpg" alt="">
+    <h4>Francois Muller</h4>
+    <span>Plumber</span>
+</div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-4">Quick Links</h4>
                     <a class="btn btn-link" href="">About Us</a>
